fixed the issue of the page overflowing vertically

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -7,12 +7,6 @@
   }
   
   .frame .overlap-wrapper {
-    overflow-x: hidden;
-    width: 1440px;
-    height: 9254px;
-  }
-  
-  .frame .overlap {
     position: relative;
     width: 1652px;
     height: 9300px;
